--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,11 @@ html {
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   background-color: #fcfcfc;
+  overflow-x: hidden;
+}
+
+body {
+  overflow: hidden;
 }
 
 ul {
@@ -202,9 +207,37 @@ Intro styles
 */
 
 .intro-component {
-  padding-top: 300px;
-  padding-bottom: 300px;
+  padding-top: 400px;
+  padding-bottom: 400px;
+  position: relative;
 }
+
+.intro-component .content-wrapper {
+  position: relative;
+}
+
+.intro-bg-image {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  max-width: 1100px;
+  top: -90%;
+  right: -40%;
+}
+
+/* .intro-component::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  width: 1400px;
+  height: 1150px;
+  right: 0;
+  top: 0;
+  z-index: -1;
+  background: url('/assets/svg/bg/header-bg.svg') no-repeat;
+  background-size: 80%;
+} */
 
 .intro-component h1 {
   margin-bottom: 16px;
@@ -228,6 +261,27 @@ Intro styles
 "Find us online" styles
 ================== 
 */
+
+.socials-component {
+  position: relative;
+}
+
+.socials-component .content-wrapper {
+  position: relative;
+}
+
+.socials-component .content-wrapper::before {
+  content: '';
+  position: absolute;
+  width: 811px;
+  height: 811px;
+  left: -20%;
+  top: -30%;
+  overflow: hidden;
+  z-index: -1;
+  background: url('/assets/svg/bg/socials-bg.svg') no-repeat;
+  background-size: 55%;
+}
 
 .socials-component h2 {
   margin-bottom: 68px;
@@ -363,7 +417,7 @@ Blog styles
 
 .blog-pagination {
   display: flex;
-  gap: 8px;
+  gap: 16px;
 }
 
 .blog-search-area {
@@ -373,6 +427,29 @@ Blog styles
   border: none;
   background-color: #f0f4f8;
 }
+
+/* 
+==================
+Header styles
+================== 
+*/
+
+/* header {
+  position: relative;
+}
+
+header::before {
+  content: '';
+  position: absolute;
+  width: 1400px;
+  height: 1150px;
+  right: 0;
+  top: 12%;
+  z-index: -1;
+  background: url('/assets/svg/bg/header-bg.svg') no-repeat;
+  background-size: 80%;
+} */
+
 /* 
 ==================
 Main navbar styles
@@ -381,6 +458,7 @@ Main navbar styles
 
 .nav-main-component {
   position: fixed;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
@@ -437,7 +515,7 @@ footer {
 }
 
 .footer-logo {
-  max-width: 150px;
+  max-width: 200px;
   margin-bottom: 24px;
 }
 
