--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ a {
 button {
   outline: 0;
   border: 0;
+  cursor: pointer;
 }
 
 /* 
@@ -202,6 +203,7 @@ Buttons
 
 .btn-pagination:hover,
 .btn-pagination:focus {
+  color: #000000;
   box-shadow: inset 5rem -5rem 0 0 var(--color-secondary);
 }
 
@@ -234,20 +236,6 @@ Intro styles
   top: -90%;
   right: -40%;
 }
-
-/* .intro-component::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  width: 1400px;
-  height: 1150px;
-  right: 0;
-  top: 0;
-  z-index: -1;
-  background: url('/assets/svg/bg/header-bg.svg') no-repeat;
-  background-size: 80%;
-} */
 
 .intro-component h1 {
   margin-bottom: 16px;
@@ -451,6 +439,7 @@ Blog styles
 
 .btn-search img {
   width: 32px;
+  cursor: pointer;
 }
 
 .blog-search:focus {
@@ -458,28 +447,6 @@ Blog styles
   outline: 2px solid #235f943d;
   box-shadow: #235f943d 0 10px 15px;
 }
-
-/* 
-==================
-Header styles
-================== 
-*/
-
-/* header {
-  position: relative;
-}
-
-header::before {
-  content: '';
-  position: absolute;
-  width: 1400px;
-  height: 1150px;
-  right: 0;
-  top: 12%;
-  z-index: -1;
-  background: url('/assets/svg/bg/header-bg.svg') no-repeat;
-  background-size: 80%;
-} */
 
 /* 
 ==================
@@ -530,6 +497,28 @@ Main navbar styles
 
 /* 
 ==================
+Mobile navbar styles
+================== 
+*/
+
+.nav-mobile-component {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  z-index: 2;
+  height: 120px;
+  width: 100vw;
+  background-color: #fff;
+  border-top: 4px solid #f8f7fa;
+}
+
+.nav-mobile-links-list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* 
+==================
 Footer styles
 ================== 
 */
@@ -576,4 +565,51 @@ footer {
 .social-link-sm:hover {
   box-shadow: #235f943d 0 10px 15px;
   transform: translateY(-5px);
+}
+
+/* 
+==================
+Media queries
+================== 
+*/
+
+@media (max-width: 1200px) {
+  .intro-bg-image {
+    max-width: 1000px;
+    top: -90%;
+    right: -30%;
+  }
+
+  .socials-component .content-wrapper::before {
+    content: '';
+    position: absolute;
+    width: 811px;
+    height: 811px;
+    left: -8%;
+    top: -20%;
+    overflow: hidden;
+    z-index: -1;
+    background: url('/assets/svg/bg/socials-bg.svg') no-repeat;
+    background-size: 45%;
+  }
+}
+
+@media (max-width: 992px) {
+  .nav-main-component {
+    display: none;
+  }
+
+  .nav-mobile-component {
+    display: block;
+  }
+
+  footer {
+    padding-bottom: 200px;
+  }
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 576px) {
 }
