--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,7 @@ Intro styles
 
 .intro-buttons {
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
 }
 
@@ -666,7 +667,7 @@ Media queries
   .intro-bg-image {
     opacity: 40%;
     max-width: 900px;
-    top: -80%;
+    top: -60%;
     right: -30%;
   }
 
@@ -693,8 +694,8 @@ Media queries
   h2::before {
     content: '';
     position: absolute;
-    height: 4px;
-    width: 64px;
+    height: 6px;
+    width: 52px;
     background-color: var(--color-primary);
     transform: translateY(72px);
   }
@@ -703,19 +704,79 @@ Media queries
     font-size: 32px;
   }
 
+  .intro-bg-image {
+    opacity: 40%;
+    max-width: 600px;
+    top: -10%;
+    right: -30%;
+  }
+
   .intro-component {
     padding-top: 120px;
     padding-bottom: 120px;
   }
 
+  .socials-component .content-wrapper::before {
+    left: -10%;
+    top: -10%;
+    background-size: 25%;
+  }
+
+  .social-links-list-lg {
+    margin-bottom: 80px;
+  }
+
   .social-link-lg {
+    max-width: 56px;
+    max-height: 56px;
+  }
+
+  .social-link-sm {
     max-width: 48px;
     max-height: 48px;
   }
 
-  .social-link-sm {
-    max-width: 36px;
-    max-height: 36px;
+  .blog-pagination {
+    width: 100%;
+  }
+
+  .btn-pagination {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: 700;
+    font-size: 16px;
+  }
+
+  .btn-pagination svg {
+    width: 40%;
+    height: 40%;
+  }
+
+  .blog-search {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-basis: 100%;
+    font-size: 16px;
+    padding: 12px;
+    border-radius: 50px;
+    border: none;
+    background-color: #f0f4f8;
+  }
+
+  .blog-search-area {
+    padding-left: 16px;
+    outline: none;
+    background-color: #f0f4f8;
+    border: none;
+  }
+
+  .btn-search {
+    border-radius: 50%;
+    padding: 8px 11px;
   }
 
   .nav-mobile-component {
